--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -40,6 +40,19 @@ code{
   border-radius 50%
 }
 
+img{
+  margin-top 15px
+  border-radius 10px
+  box-shadow: 0 0 10px #ffffff;
+}
+
+tr:nth-child(2n) {
+  background-color: $backgroundColor;
+}
+
+th, td {
+  min-width: 70px;
+}
 /*---滚动条默认显示样式--*/
 ::-webkit-scrollbar-thumb {
   background-color: $borderColor;
